add package metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "chess-move-gen"
+description = "Fast chess move generation library"
 version = "0.1.0"
 authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
+homepage = "https://github.com/peterellisjones/rust_move_gen"
+repository = "https://github.com/peterellisjones/rust_move_gen.git"
+keywords = ["chess"]
+categories = ["game-engines"]
+license = "MIT"
 
 [dependencies]
 rand = "*"
