--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chess-move-gen"
-description = "Fast chess move generation library"
-version = "0.5.1"
+description = "Fast chess move generation library. Uses SIMD for fast sliding piece move generation"
+version = "0.5.2"
 authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
 homepage = "https://github.com/peterellisjones/rust_move_gen"
 repository = "https://github.com/peterellisjones/rust_move_gen.git"
