--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chess-move-gen"
 description = "Fast chess move generation library. Uses SIMD for fast sliding piece move generation"
-version = "0.5.2"
+version = "0.6.0"
 authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
 homepage = "https://github.com/peterellisjones/rust_move_gen"
 repository = "https://github.com/peterellisjones/rust_move_gen.git"
@@ -13,6 +13,17 @@ include = [
     "Cargo.toml",
     "LICENSE.txt"
 ]
+
+[profile.release]
+opt-level = 3
+debug = false
+
+[profile.dev]
+opt-level = 1
+debug = true
+
+[profile.test]
+opt-level = 1
 
 [dependencies]
 rand = "0.5"
