Revert "update Cargo.toml src pattern matching"
This reverts commit 5371429dbcd8db06d0fba0614df77f6f99cadd23.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ keywords = ["chess"]
 categories = ["game-engines"]
 license = "MIT"
 include = [
-    "/src",
+    "src/*.rs",
     "Cargo.toml",
     "LICENSE.txt"
 ]
