--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,6 @@ opt-level = 1
 [dependencies]
 rand = "0.6.1"
 unindent = "0.1.3"
-simd = "0.2.3"
+packed_simd = "0.3.3"
 threadpool = "1.7.1"
 num_cpus = "1.8.0"
