--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ keywords = ["chess"]
 categories = ["game-engines"]
 license = "MIT"
 include = [
-    "src/*.rs",
+    "src/**/*.rs",
     "Cargo.toml",
     "LICENSE.txt"
 ]
