--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chess-move-gen"
 description = "Fast chess move generation library. Uses SIMD for fast sliding piece move generation"
-version = "0.7.3"
+version = "0.7.4"
 authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
 homepage = "https://github.com/peterellisjones/rust_move_gen"
 repository = "https://github.com/peterellisjones/rust_move_gen.git"
@@ -30,7 +30,9 @@ opt-level = 1
 
 [dependencies]
 rand = "0.7.3"
-unindent = "0.1.7"
 packed_simd = { version = "0.3.4", package = "packed_simd_2" }
 threadpool = "1.8.1"
 num_cpus = "1.13.0"
+
+[dev-dependencies]
+unindent = "0.1.7"
