Use pass by value for primitive types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,10 @@ path = "src/lib.rs"
 [profile.release]
 opt-level = 3
 debug = false
-lto = true
+lto = "fat"
 overflow-checks = false
+codegen-units = 1
+panic = "abort"
 
 [profile.dev]
 opt-level = 1
