--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,15 @@
 [package]
 name = "chess-move-gen"
 description = "Fast chess move generation library. Uses SIMD for fast sliding piece move generation"
-version = "0.8.2"
+version = "0.9.0"
 authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
 homepage = "https://github.com/peterellisjones/rust_move_gen"
 repository = "https://github.com/peterellisjones/rust_move_gen.git"
 keywords = ["chess"]
 categories = ["game-engines"]
 license = "MIT"
-include = [
-    "src/**/*.rs",
-    "Cargo.toml",
-    "LICENSE.txt"
-]
+include = ["src/**/*.rs", "Cargo.toml", "LICENSE.txt"]
+edition = "2024"
 
 [lib]
 path = "src/lib.rs"
@@ -33,10 +30,9 @@ debug = true
 opt-level = 1
 
 [dependencies]
-rand = "0.7.3"
-packed_simd = { version = "0.3.4", package = "packed_simd_2" }
+rand = "0.8.5"
 threadpool = "1.8.1"
-num_cpus = "1.13.0"
+num_cpus = "1.16.0"
 
 [dev-dependencies]
-unindent = "0.1.7"
+unindent = "0.2.3"
